--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ body ::-webkit-scrollbar {
 body ::-webkit-scrollbar-thumb {
   background-color: #c4c6c8;
   border-radius: 10px;
+
 }
 
 /* setting style to body only for chat route */
@@ -32,7 +33,8 @@ body ::-webkit-scrollbar-thumb {
   background-color: var(--body-bg-color);
   font-family: var(--body-font);
   color: var(--body-color);
-  margin: 8px;
+  margin: 8px !important;
+  padding: 0 !important;
   width: calc(100% - 16px);
   height: calc(100svh - 16px);
 }
