--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,10 @@ body ::-webkit-scrollbar-thumb {
   height: calc(100svh - 16px);
 }
 
+.custom-grid > *:last-child {
+  grid-column: span 2;
+}
+
 :root {
   --chatRoomContainer-width: 350px;
   --chatRoomDetail-width: 350px;
